# SonAI

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  MVP_SUMMARY.md  README.md  SPEC.md  TASKS.md  build_brief.md  build_investor_deck.js  pyproject.toml  start.bat  start.sh
artifacts/investor/: sonai-investor-deck.pptx
backend/: __init__.py  agent.py  main.py  mcp_instance.py  mcp_server.py  schemas.py  tool_registry.py
backend/generation/: __init__.py  binaural_beat.py  granular_cloud.py  instrument_layer.py  mix_render.py  texture_layer.py
backend/graph/: __init__.py
backend/sc/: __init__.py  boot.py  osc_client.py
backend/sc/synthdefs/: binaural.scd  drone.scd  granular.scd  pad.scd  texture.scd
backend/tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_graph.py  test_tools.py
backend/tools/: __init__.py  _audio_helpers.py  chroma.py  hpss.py  insight_composer.py  load_audio.py  mfcc.py  onsets.py  pitch_tonal.py  preprocess.py  segment_map.py  spectral_stats.py  stft.py  temporal_stats.py
docs/: flow-state-parameters.md  index.html  mcp-tool-registry.md  node-schemas.md  sc-synth-library.md
frontend/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AgentPanel.tsx  ControlBar.tsx  NodePalette.tsx
frontend/src/nodes/: SonaiNode.tsx
frontend/src/store/: graphStore.test.ts  graphStore.ts
tests/: __init__.py
tests/backend/: __init__.py  test_project_bootstrap.py
(+1 files in other folders)
